Added error handling to user